--- a/style.css
+++ b/style.css
@@ -86,6 +86,24 @@ a{
     }
 }
 
+@media screen and (max-width:425px) {
+    #showcase{
+        display: flex;
+        flex-direction: column;
+        margin: 15px;
+    }
+
+    .image .desktopImg{
+        display: none;
+    }
+
+    .image .mobileImg{
+        display: block;
+        /* block-size: 47%; */
+        border-radius: 10px 10px 0 0;
+    }
+}
+
 
 
 /* texts code */
@@ -171,4 +189,16 @@ a{
     .texts h3{
         margin-bottom: 5px;
     }
+}
+
+@media screen and (max-width: 425px){
+    .texts{
+        padding: 15px;
+    }
+
+    .texts h3{
+        margin-bottom: 5px;
+    }
+}) {
+    
 }
