--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ a{
     font-family: var(--montserrat);
 }
 
+.textPrimary::selection{
+    background: var(--Dark-cyan);
+    color: var(--White);
+}
+
 
 
 
