--- a/style.css
+++ b/style.css
@@ -196,6 +196,13 @@ a{
     .texts h3{
         margin-bottom: 5px;
     }
+
+    .btn{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        
+    }
 }
 
 @media screen and (max-width: 425px){
@@ -206,5 +213,12 @@ a{
 
     .texts h3{
         margin-bottom: 5px;
-    }   
+    }
+    
+    .btn{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        
+    }
 }
